--- a/src/views/pages/class/task.ejs
+++ b/src/views/pages/class/task.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <%- include("../../components/head.ejs") %>
+  <script src="/js/class.js"></script>
   <title>MPC Lab | Task</title>
 </head>
 
@@ -12,10 +13,8 @@
   <main class="sm:ml-64 p-6 space-y-6">
     <!-- Task Overview Section -->
     <div class="bg-background-50 shadow-md rounded-lg p-6 space-y-4">
-      <h1 id="task-name" class="text-2xl md:text-3xl font-semibold mb-2">Task Name</h1>
-      <p id="task-description" class="text-gray-700">
-        This is a short description of the task that outlines the key objectives and details.
-      </p>
+      <h1 id="task-name" class="text-2xl md:text-3xl font-semibold mb-2"></h1>
+      <p id="task-description" class="text-gray-700"></p>
       <div class="flex flex-wrap gap-4">
         <!-- Action buttons for task -->
         <a href="/classrooms/<%= classId %>/tasks/<%= taskId %>/print" class="bg-primary-500 text-white px-4 py-2 rounded hover:bg-primary-400 transition duration-200">
@@ -37,7 +36,7 @@
         <h2 class="text-xl font-bold">Task Details</h2>
         <ul class="list-disc list-inside text-gray-700">
           <li>
-            Created at: <span id="task-created-at" class="font-semibold">12:00 PM, 12th May 2021</span>
+            Created at: <span id="task-created-at" class="font-semibold"></span>
           </li>
         </ul>
       </div>
@@ -45,13 +44,59 @@
       <!-- Grading Progress Card -->
       <div class="bg-background-50 shadow-md rounded-lg p-6 space-y-4">
         <h2 class="text-xl font-bold">Grading Progress</h2>
-        <p id="grading-progress" class="text-gray-700">You have graded 7 out of 10 questions.</p>
+        <p id="grading-progress" class="text-gray-700">You have graded 0 out of 0 students.</p>
         <div class="relative bg-gray-200 rounded-full h-4">
-          <div id="grading-progress-bar" class="absolute top-0 left-0 bg-primary-500 h-4 rounded-full" style="width: 70%;"></div>
+          <div id="grading-progress-bar" class="absolute top-0 left-0 bg-primary-500 h-4 rounded-full" style="width: 0%;"></div>
         </div>
       </div>
     </div>
   </main>
+  <script>
+    const classroom = new Classroom(app);
+
+    // Fetch task details and render
+    classroom.getTask("<%= taskId %>").then((response) => {
+      if (response.status === "success") {
+        document.getElementById("task-name").textContent = response.data.name;
+        document.getElementById("task-description").textContent = response.data.description;
+        document.getElementById("task-created-at").textContent = new Date(response.data.createdAt).toLocaleString();
+
+        // Calculate grading progress
+        const userTasks = response.data.userTasks;
+        const gradedTasks = userTasks.filter((task) => task.graded === true);
+        const progress = (gradedTasks.length / userTasks.length) * 100;
+        document.getElementById("grading-progress").textContent = `You have graded ${gradedTasks.length} out of ${userTasks.length} students.`;
+        document.getElementById("grading-progress-bar").style.width = `${progress}%`;
+
+        classroom.getClass("<%= classId %>").then((response) => {
+          if (response.status === "success") {
+            const students = response.data.students.filter((student) => !student.deleted);
+
+            document.title = `MPC Lab | Task - ${response.data.name}`;
+            document.getElementById("classroom-name").textContent = response.data.name;
+            const studentsCount = document.getElementById("students-count");
+            const adminsCount = document.getElementById("admins-count");
+            studentsCount.textContent = students.length;
+            adminsCount.textContent = response.data.admins.length;
+            studentsCount.classList.remove("hidden");
+            adminsCount.classList.remove("hidden");
+          } else {
+            if (response.error.code === "CLASS_NOT_FOUND" || response.error.code === "INVALID_CLASS_ID") {
+              app.location.showNotFound();
+            } else if (response.error.code === "ACCESS_DENIED") {
+              app.location.showForbidden();
+            }
+          }
+        });
+      } else {
+        if (response.error.code === "TASK_NOT_FOUND" || response.error.code === "CLASS_NOT_FOUND") {
+          app.location.showNotFound();
+        } else if (response.error.code === "ACCESS_DENIED") {
+          app.location.showForbidden();
+        }
+      }
+    });
+  </script>
 </body>
 
 </html>
