--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -5,6 +5,9 @@
     <div class="flex justify-center space-x-4 mb-4">
       <a href="https://github.com/mpc-lab-x" class="text-white hover:text-primary-300 transition duration-300">GitHub</a>
       <a href="https://www.npmjs.com/package/mpclab" class="text-white hover:text-primary-300 transition duration-300">NPM</a>
+      <a href="/about" class="text-white hover:text-primary-300 transition duration-300">About Us</a>
+      <a href="/api-docs" class="text-white hover:text-primary-300 transition duration-300">Open API</a>
+      <a href="/team" class="text-white hover:text-primary-300 transition duration-300">Our Team</a>
       <a href="/contact" class="text-white hover:text-primary-300 transition duration-300">Contact Us</a>
     </div>
     <p class="text-sm">
