--- a/src/views/pages/features.ejs
+++ b/src/views/pages/features.ejs
@@ -90,7 +90,7 @@
     // Initialize AOS animations
     AOS.init({
       duration: 800,
-      easing: 'ease-in-out',
+      easing: "ease-in-out",
       once: true
     });
   </script>
