--- a/src/views/pages/team.ejs
+++ b/src/views/pages/team.ejs
@@ -92,7 +92,7 @@
     // Initialize AOS animations
     AOS.init({
       duration: 800,
-      easing: 'ease-in-out',
+      easing: "ease-in-out",
       once: true
     });
   </script>
