--- a/src/views/components/problem-type-selector.ejs
+++ b/src/views/components/problem-type-selector.ejs
@@ -11,6 +11,10 @@
         </button>
       </div>
 
+      <div class="py-3 px-4 bg-gray-100">
+        <input id="problem-type-search" type="text" placeholder="Search for a problem type..." class="w-full py-2 px-4 rounded-lg shadow-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+      </div>
+
       <div class="p-4 overflow-y-auto flex-1">
         <span class="mt-1 text-gray-600">Please select a category to view detailed problems and examples.</span>
         <ul id="problem-type-selector-list" class="space-y-4 mt-4 relative"></ul>
