--- a/src/views/pages/404.ejs
+++ b/src/views/pages/404.ejs
@@ -18,6 +18,7 @@
       </div>
     </div>
   </section>
+  <%- include("../components/footer.ejs") %>
   <script>
     history.pushState(null, null, "<%= path %>");
   </script>
