--- a/src/views/pages/api-docs.ejs
+++ b/src/views/pages/api-docs.ejs
@@ -91,7 +91,7 @@
 
         <h3 class="text-2xl font-semibold mt-6 mb-4">Query Parameters:</h3>
         <ul class="list-disc ml-6 text-lg">
-          <li><strong>options</strong> (object): Problem generation options, customized to your needs.</li>
+          <li><strong>options</strong> (object): Problem generation options, customized to your needs. (Optional, object (Use JSON string))</li>
         </ul>
 
         <h3 class="text-2xl font-semibold mt-6 mb-4">Response:</h3>
