--- a/src/views/pages/api-docs.ejs
+++ b/src/views/pages/api-docs.ejs
@@ -7,7 +7,7 @@
   <title>MPC Lab | API Docs</title>
   <!-- AOS Animation Library CSS -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/atom-one-dark.min.css">
+  <link href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/atom-one-dark.min.css" rel="stylesheet">
   <style>
     @keyframes gradient-animation {
       0% {
@@ -163,9 +163,9 @@ console.log(problem);'>Copy</button>
   <!-- Footer Section -->
   <%- include("../components/footer.ejs") %>
 
-  <!-- AOS Library JS -->
+  <!-- AOS Library JS, Highlight.js Library JS, and Copy to Clipboard functionality -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
   <script>
     // Initialize AOS animations
     AOS.init({
